@startuml

title __LOGICALOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.logicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.HBaseLogicalOperatorFactory {
          + newOperatorAnd()
          + newOperatorOr()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.logicalOperators {
      abstract class gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.LogicalOperator {
          + getOperatorExpression()
          # LogicalOperator()
          {abstract} # getLogicalExpression()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.logicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.OperatorAnd {
          {static} + newOperatorAnd()
          # getLogicalExpression()
          - OperatorAnd()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.hbase {
    namespace filterOperator.logicalOperators {
      class gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.OperatorOr {
          {static} + newOperatorOr()
          # getLogicalExpression()
          - OperatorOr()
      }
    }
  }
  

  gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.HBaseLogicalOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.logicalOperators.BaseLogicalOperatorFactory
  gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.LogicalOperator -up-|> gr.ds.unipi.noda.api.core.operators.filterOperators.logicalOperators.LogicalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.OperatorAnd -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.LogicalOperator
  gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.OperatorOr -up-|> gr.ds.unipi.noda.api.hbase.filterOperator.logicalOperators.LogicalOperator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
